# synthetic_gnns_4_hwtrojans

./: .gitignore  README.md  concat_results.py  data_gen.py  matrix_runner.py  models.py  pregenerate_dataset.py  pyproject.toml  run_matrix_seq.sh  train_and_eval.py
scripts/: best_configs_0.5.py  params_vs_f1.py  plot_combined.py
