[project]
name = "gnn_hwtj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
    "torchmetrics>=1.8.2",
]
